@@ -10,7 +10,6 @@ package org.elasticsearch.xpack.watcher.rest.action;
 import org.elasticsearch.ElasticsearchParseException;
 import org.elasticsearch.client.internal.node.NodeClient;
 import org.elasticsearch.common.bytes.BytesReference;
-import org.elasticsearch.common.util.set.Sets;
 import org.elasticsearch.core.RestApiVersion;
 import org.elasticsearch.rest.BaseRestHandler;
 import org.elasticsearch.rest.BytesRestResponse;
@@ -31,7 +30,6 @@ import org.elasticsearch.xpack.core.watcher.transport.actions.execute.ExecuteWat
 import org.elasticsearch.xpack.core.watcher.watch.WatchField;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
@@ -172,13 +170,11 @@ public class RestExecuteWatchAction extends BaseRestHandler implements RestReque
         return builder.request();
     }
 
-    private static final Set<String> FILTERED_FIELDS = Collections.unmodifiableSet(
-        Sets.newHashSet(
-            "watch.input.http.request.auth.basic.password",
-            "watch.input.chain.inputs.*.http.request.auth.basic.password",
-            "watch.actions.*.email.attachments.*.reporting.auth.basic.password",
-            "watch.actions.*.webhook.auth.basic.password"
-        )
+    private static final Set<String> FILTERED_FIELDS = Set.of(
+        "watch.input.http.request.auth.basic.password",
+        "watch.input.chain.inputs.*.http.request.auth.basic.password",
+        "watch.actions.*.email.attachments.*.reporting.auth.basic.password",
+        "watch.actions.*.webhook.auth.basic.password"
     );
 
     @Override
